// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csf-named-exports exported alias name 1`] = `
Object {
  "source": "
const myStory = () => {};
myStory.story = {
 name: 'Custom story name',
}

export { myStory as exportedStory}
    ",
  "stories": Object {
    "exportedStory": Object {
      "arguments": Array [],
      "loc": Object {
        "end": Object {
          "column": 24,
          "line": 1,
        },
        "start": Object {
          "column": 16,
          "line": 1,
        },
      },
      "name": "Custom story name",
      "parameters": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 27,
              "line": 3,
            },
            "start": Object {
              "column": 2,
              "line": 3,
            },
          },
          "name": "name",
          "value": "Custom story name",
        },
      ],
      "source": "() => {}",
    },
  },
}
`;

exports[`csf-named-exports re-exported name 1`] = `
Object {
  "source": "
import { myStory } from 'stories.tsx';
myStory.story = {
  name: 'Custom story name',
};

export { myStory };
    
    ",
  "stories": Object {},
}
`;

exports[`csf-named-exports story propery name 1`] = `
Object {
  "source": "
const myStory = () => {};
myStory.story = {
 name: 'Custom story name',
}

export { myStory }
    ",
  "stories": Object {
    "myStory": Object {
      "arguments": Array [],
      "loc": Object {
        "end": Object {
          "column": 24,
          "line": 1,
        },
        "start": Object {
          "column": 16,
          "line": 1,
        },
      },
      "name": "Custom story name",
      "parameters": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 27,
              "line": 3,
            },
            "start": Object {
              "column": 2,
              "line": 3,
            },
          },
          "name": "name",
          "value": "Custom story name",
        },
      ],
      "source": "() => {}",
    },
  },
}
`;
